# veil

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
crates/core/: Cargo.toml
crates/core/benches/: crypto_bench.rs
crates/core/src/: error.rs  lib.rs
crates/core/src/crypto/: commitment.rs  encryption.rs  merkle.rs  mod.rs  nullifier.rs  poseidon.rs  poseidon_constants.rs
crates/core/src/proof/: circuit.rs  mod.rs  transfer_circuit.rs
crates/core/src/proof/gadgets/: merkle.rs  mod.rs  poseidon.rs
crates/core/src/relayer/: mod.rs
crates/program/: Anchor.toml  Cargo.toml
crates/program/src/: groth16.rs  instructions.rs  lib.rs  merkle.rs  nullifier.rs  processor.rs  state.rs  token.rs  verification.rs
examples/: basic_usage.py  benchmark.py  localnet_demo.py  spl_privacy.py
scripts/: build_all.sh  deploy.sh  setup.sh  test.sh
src/veil/: __init__.py  assets.py  client.py  solana_client.py  token_utils.py  types.py  utils.py
tests/: __init__.py
tests/integration/: test_commitment.py  test_integration.py  test_privacy_pool.rs  test_spl_tokens.py
tests/unit/: test_client.py  test_shield.py
