[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "veil-solana"
version = "0.1.1"
description = "Privacy SDK for Solana with zkSNARK-powered transactions - Python interface with Rust cryptographic backbone"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["solana", "privacy", "zksnark", "zero-knowledge", "defi", "sdk"]
authors = [
    {name = "Veil Team", email = "dev@veil-sdk.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "solana>=0.30.0",
    "solders>=0.18.0",
    "anchorpy>=0.18.0",
    "base58>=2.1.1",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/veil-solana/veil"
Documentation = "https://veil-sdk.com/docs/getting-started/overview"
Repository = "https://github.com/veil-solana/veil"
Issues = "https://github.com/veil-solana/veil/issues"

[tool.maturin]
python-source = "src"
manifest-path = "crates/core/Cargo.toml"
module-name = "veil._rust_core"
binding = "pyo3"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
