[package]
name = "veil-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Privacy cryptographic core for Veil SDK"

[lib]
name = "veil_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace dependencies
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-snark = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
bs58 = { workspace = true }
pyo3 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false
